@@ -15,10 +15,11 @@ import           Data.Ext
 import           Data.Geometry.Point
 import           Data.Geometry.Properties
 import           Data.Geometry.Transformation
-import           Data.Geometry.Vector
+import           Data.Geometry.Vector hiding (imap)
 import qualified Data.Geometry.Vector as GV
 import qualified Data.List as List
 import           Data.Maybe
+import           Data.Ord (Down(..))
 import           Data.Reflection
 import qualified Data.Vector as V
 import qualified Data.Vector.Mutable as MV
@@ -36,6 +37,8 @@ sideTest'             :: ( SoS p, Dimension p ~ 2, r ~ NumType p
                          , Eq r, Num r
                          ) => [p] -> Sign
 sideTest' (q:p1:p2:_) = sideTest q (Vector2 p1 p2)
+
+
 
 
 
@@ -116,16 +119,24 @@ class HasIndex i => CanAquire i a where
   aquire  :: i -> a
 
 
+class IsAPoint p where
+  asAPoint :: Lens (p d r) (p d' r') (Point d r) (Point d' r')
+
+  vector' :: Lens (p d r) (p d r) (Vector d r) (Vector d r)
+  vector' = asAPoint.vector
+
 ----------------------------------------
 
-newtype I s a = I Int deriving Show
+newtype I s a = I Int deriving (Eq, Ord, Enum)
+
+instance Show (I s a) where
+  showsPrec i (I j) = showsPrec i j
 
 instance HasIndex (I s a) where
   indexOf (I i) = i
 
 instance Reifies s (V.Vector a) => (I s a) `CanAquire` a where
   aquire (I i) = let v = reflect @s undefined in v V.! i
-
 
 ----------------------------------------
 
@@ -141,7 +152,77 @@ instance AsPoint p => AsPoint (p :+ e) where
 
 --------------------------------------------------------------------------------
 
-newtype P i d r = P i deriving HasIndex
+-- data R r = Constant !r | Indirect !r {-# UNPACK #-} !Int {-# UNPACK #-} !Int
+
+-- instance Show r => Show (R r) where
+--   show (Constant r)     = show r
+--   show (Indirect r _ _) = show r
+
+-- instance Eq r => Eq (R r) where
+
+data RWithIdx r = RWithIdx !r
+                           {-# UNPACK #-} !Int -- ^ index of the point in [0,n]
+                           {-# UNPACK #-} !Int -- ^ index of the coordinate in [0,d-1]
+                deriving (Eq)
+
+instance Show r => Show (RWithIdx r) where
+  showsPrec i (RWithIdx r _ _) = showsPrec i r
+
+instance Ord r => Ord (RWithIdx r) where
+  (RWithIdx x i j) `compare` (RWithIdx y k l) = x `compare` y
+                                             <> (Down i) `compare` (Down k)
+                                             <> j `compare` l
+  -- see the paper, function Smaller, for the slightly weird implementation I guess.
+
+
+
+
+-- | Data type that allows us to combine indexed R values and "normal"
+-- constant R values.  Two indexed r values are equal if and only if
+-- their indices match exactly. That means that values comming form
+-- different indices can always be ordered, i.e. we get rid of degeneracies.
+--
+-- When comparing an indexed value against a constant the
+-- equality/ordering is determined only w.r.t. the "real" r value.
+--
+data R r = Constant !r
+         | IndexedR !r {-# UNPACK #-} !Int -- ^ index of the point in [0,n]
+                       {-# UNPACK #-} !Int -- ^ index of the coordinate in [0,d-1]
+
+toR :: R r -> r
+toR = \case
+  Constant r      -> r
+  IndexedR r _ _  -> r
+
+fromR :: r -> R r
+fromR = Constant
+
+fromIndexed                  :: RWithIdx r -> R r
+fromIndexed (RWithIdx x i j) = IndexedR x i j
+
+instance Show r => Show (R r) where
+  showsPrec i = showsPrec i . toR
+
+instance Eq r => Eq (R r) where
+  (IndexedR x i j) == (IndexedR y k l) = x == y && i == k && j == l
+  a                == b                = toR a == toR b
+
+instance Ord r => Ord (R r) where
+  (IndexedR x i j) `compare` (IndexedR y k l) = RWithIdx x i j `compare` RWithIdx y k l
+  a                `compare` b                = toR a          `compare` toR b
+
+
+-- instance (Num r, Ord r) => Num (R r) where
+--   -- +, *, -, abs, signum,fromInteger, negate
+--   -- (Constant )
+--   signum
+--   fromInteger = Constant
+
+--   -- negate is prob. troublesome
+
+--------------------------------------------------------------------------------
+
+newtype P i d r = P i deriving (HasIndex, Eq, Show)
 
 instance i `CanAquire` (Point d r) => (P i d r) `CanAquire` (Point d r) where
   aquire (P i) = aquire i
@@ -152,6 +233,20 @@ type instance Dimension (P i d r) = d
 
 instance i `CanAquire` (Point d r) => AsPoint (P i d r) where
   asPoint (P i) = aquire i
+
+asPointWithIndex       :: (Arity d, i `CanAquire` Point d r)
+                       => P i d r -> Point d (RWithIdx r)
+asPointWithIndex (P i) = Point . imap (\j r -> RWithIdx r (indexOf i) j) . toVec $ aquire i
+
+
+
+
+
+-- instance (i `CanAquire` Point d r, Arity d) => P i d r `CanAquire` Point d (R i) where
+--   aquire (P i) = Point $ pure ()
+
+
+
 
 --------------------------------------------------------------------------------
 
